# ROS2Pix4D

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/: utility.h
launch/: ROSToPix4D.launch
src/: Cam2Pix4D.py  Cam2Pix4D_v1.py  Cam2Pix4D_v2.py  Data2Plot.py  Img2Pix4D.py  MetadataImg.py  ROSToPix4D.cpp  ROSToPix4D_v3.cpp  Rosbag2Data.py
ultis/: comandos_Git.txt  comandos_Scripts.txt  installations.txt  link.txt  ssh_Workstation.sh
